--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/marclafratta/currencyexchange#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "morgan": "^1.9.0",
     "restify": "^7.1.2"
   },
   "devDependencies": {
